--- a/.env
+++ b/.env
@@ -2,4 +2,8 @@ DB_HOST=localhost
 DB_USER=myuser
 DB_PASS=mypassword
 BASE_URL=https://soteria.org
+LOCAL_URL=http://localhost:3000
 SOTERIA_KEY='sDwNcXXkStbAl1JlKwsAvYV+qI1bJqV/PxpeoQMPo6c='
+MONGO_URL=mongodb+srv://differentialsystems:<Muranga001@gmail.com>@zolto.964lkrl.mongodb.net/?retryWrites=true&w=majority
+NEXT_PUBLIC_OPENAI_API_KEY= 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
+OPENAIORG=org-BOOaB4NbMsUfyCtNly8R98J8
