--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@expo/next-adapter": "^5.0.2",
     "@nextui-org/button": "2.0.26",
     "@nextui-org/code": "2.0.24",
     "@nextui-org/input": "2.1.16",
@@ -20,6 +21,7 @@
     "@nextui-org/switch": "2.0.25",
     "@nextui-org/system": "2.0.15",
     "@nextui-org/theme": "2.1.17",
+    "@prisma/client": "^5.7.0",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
     "@types/node": "20.5.7",
@@ -34,14 +36,21 @@
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "intl-messageformat": "^10.5.0",
-    "next": "13.4.0",
+    "lottie-react": "^2.4.0",
+    "mongoose": "^8.0.2",
+    "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
+    "openai": "^3.3.0",
     "postcss": "8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yarn": "^1.22.21"
+  },
+  "devDependencies": {
+    "prisma": "^5.7.0"
   }
 }
