--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "next-app-template",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clear": "rm -rf node_modules .next yarn.lock package-lock.json && yarn cache clean --force"
   },
   "dependencies": {
     "@expo/next-adapter": "^5.0.2",
@@ -36,6 +37,7 @@
     "express": "^4.18.2",
     "framer-motion": "^10.16.4",
     "intl-messageformat": "^10.5.0",
+    "kanyoro_next_table": "^1.0.0",
     "lottie-react": "^2.4.0",
     "mongoose": "^8.0.2",
     "next": "^14.0.4",
